src/test/ui/codemap_tests/two_files.stderr
error[E0404]: `Bar` is not a trait
  --> $DIR/two_files.rs:15:6
   |
15 | impl Bar for Baz { }
   |      ^^^ expected trait, found type alias
   |
   = note: type aliases cannot be used for traits

error: cannot continue compilation due to previous error

